# pose_solver

./: CMakeLists.txt  README.md  package.xml  pose_solver_plugin.xml
config/: pose_solver_config.yaml
include/pose_solver/: pose_solver.h
include/rm_pose_solver/: pose_solver.h
launch/: pose_solver.launch
src/: pose_solver.cpp
