<?xml version="1.0"?>
<package format="2">
  <name>pose_solver</name>
  <version>7.0.0</version>
  <description>The pose_solver package</description>

  <maintainer email="2217210958@qq.com">Ksals</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nodelet</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>rm_msgs</depend>
  <depend>rm_vision</depend>
  <depend>pluginlib</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/pose_solver_plugin.xml"/>
  </export>
</package>
